--- a/package.json
+++ b/package.json
@@ -11,16 +11,80 @@
         "preview": "next build && next start"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.0.0",
+        "@next-auth/mongodb-adapter": "^1.1.1",
+        "@radix-ui/react-accessible-icon": "^1.0.2",
+        "@radix-ui/react-accordion": "^1.1.1",
+        "@radix-ui/react-alert-dialog": "^1.0.3",
+        "@radix-ui/react-aspect-ratio": "^1.0.2",
+        "@radix-ui/react-avatar": "^1.0.2",
+        "@radix-ui/react-checkbox": "^1.0.3",
+        "@radix-ui/react-collapsible": "^1.0.2",
+        "@radix-ui/react-context-menu": "^2.1.3",
+        "@radix-ui/react-dialog": "^1.0.3",
+        "@radix-ui/react-dropdown-menu": "^2.0.4",
+        "@radix-ui/react-hover-card": "^1.0.5",
+        "@radix-ui/react-label": "^2.0.1",
+        "@radix-ui/react-menubar": "^1.0.2",
+        "@radix-ui/react-navigation-menu": "^1.1.2",
+        "@radix-ui/react-popover": "^1.0.5",
+        "@radix-ui/react-progress": "^1.0.2",
+        "@radix-ui/react-radio-group": "^1.1.2",
+        "@radix-ui/react-scroll-area": "^1.0.3",
+        "@radix-ui/react-select": "^1.2.1",
+        "@radix-ui/react-separator": "^1.0.2",
+        "@radix-ui/react-slider": "^1.1.1",
+        "@radix-ui/react-slot": "^1.0.1",
+        "@radix-ui/react-switch": "^1.0.2",
+        "@radix-ui/react-tabs": "^1.0.3",
+        "@radix-ui/react-toast": "^1.1.3",
+        "@radix-ui/react-toggle": "^1.0.2",
+        "@radix-ui/react-toggle-group": "^1.0.3",
+        "@radix-ui/react-tooltip": "^1.0.5",
+        "@t3-oss/env-nextjs": "^0.6.0",
+        "@typescript-eslint/parser": "^5.56.0",
+        "@vercel/analytics": "^0.1.11",
+        "@vercel/og": "^0.4.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^1.2.1",
+        "lucide-react": "^0.127.0",
+        "mongoose": "^7.0.3",
         "next": "13.4.12",
+        "next-auth": "^4.20.1",
+        "next-themes": "^0.2.1",
+        "nodemailer": "^6.9.1",
+        "postmark": "^3.0.15",
+        "prop-types": "^15.8.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.43.9",
+        "tailwind-merge": "^1.10.0",
+        "tailwindcss-animate": "^1.0.5",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.6.7",
+        "@commitlint/config-conventional": "^17.6.7",
+        "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+        "@tailwindcss/line-clamp": "^0.4.4",
+        "@tailwindcss/typography": "^0.5.9",
+        "@types/eslint": "^8.44.0",
         "@types/node": "^20.4.4",
+        "@types/nodemailer": "^6.4.8",
+        "@types/prettier": "^2.7.3",
+        "@types/prop-types": "^15.7.5",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "autoprefixer": "^10.4.14",
+        "eslint": "^8.37.0",
+        "eslint-config-next": "^13.2.4",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-tailwindcss": "^3.10.1",
         "postcss": "^8.4.27",
+        "prettier": "^2.8.7",
+        "prettier-plugin-tailwindcss": "^0.2.7",
+        "pretty-quick": "^3.1.3",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.1.6"
     }
