--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.0.0",
+        "@monaco-editor/react": "^4.5.1",
         "@next-auth/mongodb-adapter": "^1.1.1",
         "@radix-ui/react-accessible-icon": "^1.0.2",
         "@radix-ui/react-accordion": "^1.1.1",
@@ -52,7 +53,6 @@
         "next": "13.4.12",
         "next-auth": "^4.20.1",
         "next-themes": "^0.2.1",
-        "nodemailer": "^6.9.1",
         "postmark": "^3.0.15",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
@@ -70,7 +70,6 @@
         "@tailwindcss/typography": "^0.5.9",
         "@types/eslint": "^8.44.0",
         "@types/node": "^20.4.4",
-        "@types/nodemailer": "^6.4.8",
         "@types/prettier": "^2.7.3",
         "@types/prop-types": "^15.7.5",
         "@types/react": "^18.2.15",
