--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@radix-ui/react-toggle": "^1.0.2",
         "@radix-ui/react-toggle-group": "^1.0.3",
         "@radix-ui/react-tooltip": "^1.0.5",
+        "@sentry/nextjs": "^7.60.0",
         "@t3-oss/env-nextjs": "^0.6.0",
         "@typescript-eslint/parser": "^5.56.0",
         "@vercel/analytics": "^0.1.11",
